finished resetting details and edit activities without including the recorder
this mvp pattern is based on android blueprint

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.mynotes">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -11,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.EditNoteActivity"></activity>
-        <activity android:name=".view.activities.DisplayNoteActivity" />
-        <activity android:name=".view.activities.NoteListActivity">
+        <activity android:name=".noteedit.NoteEditActivity"/>
+        <activity android:name=".notedetails.NoteDetailsActivity" />
+        <activity android:name=".notelist.NoteListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
